--- a/app/src/main/res/layout/activity_comida_detalle.xml
+++ b/app/src/main/res/layout/activity_comida_detalle.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/img_comida"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:contentDescription="@string/ImgDesc"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"></ImageView>
 
@@ -47,13 +47,15 @@
         android:id="@+id/btnCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:backgroundTint="@android:color/white"
         android:src="@drawable/ic_baseline_shopping_cart_24"
         app:elevation="6dp"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
         app:pressedTranslationZ="12dp"
-        app:useCompatPadding="true"></com.google.android.material.floatingactionbutton.FloatingActionButton>
+        app:useCompatPadding="true"
+        tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -97,11 +99,12 @@
                         <ImageView
                             android:id="@+id/img_simbol_pen"
                             android:layout_width="1dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
                             android:layout_marginRight="1dp"
-                            android:layout_height="wrap_content"
                             android:layout_weight="2"
-                            android:src="@drawable/ic_svgsol"></ImageView>
+                            android:src="@drawable/ic_svgsol"
+                            android:contentDescription="TODO"></ImageView>
 
                         <TextView
                             android:id="@+id/comida_precio"
@@ -132,11 +135,11 @@
                             android:id="@+id/textViewNumber"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="0.3"
                             android:text="@string/textViewNumber"
-                            android:textSize="25sp"
-                            android:layout_gravity="center"
                             android:textColor="@color/black"
+                            android:textSize="25sp"
                             tools:text="@string/textViewNumber" />
 
                         <Button
@@ -149,8 +152,7 @@
                             android:onClick="incrementar"
                             android:text="@string/buttonR"
                             android:textColor="@color/white"
-                            android:textSize="35sp"
-                             />
+                            android:textSize="35sp" />
 
                     </LinearLayout>
 
@@ -158,11 +160,12 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
 
                 <TextView
                     android:id="@+id/comida_descripcion"
