--- a/app/src/main/res/layout/app_bar_inicio.xml
+++ b/app/src/main/res/layout/app_bar_inicio.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/blueg"
             app:popupTheme="@style/Theme.ProyectoFinal.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
