--- a/app/src/main/res/menu/inicio.xml
+++ b/app/src/main/res/menu/inicio.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/refresh"
-        android:orderInCategory="100"
-        android:title="Refresh"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_baseline_refresh_24"
+        android:iconTint="@android:color/white"
+        android:title="Refresh" />
 </menu>
