--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -10,19 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@color/white">
 
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="35dp"
             app:srcCompat="@drawable/logo" />
 
         <EditText
             android:id="@+id/txt_nombre"
             android:layout_width="350dp"
             android:layout_height="60dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape"
             android:ems="20"
@@ -34,6 +40,8 @@
             android:id="@+id/txt_correo"
             android:layout_width="350dp"
             android:layout_height="60dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape"
             android:ems="20"
@@ -45,6 +53,8 @@
             android:id="@+id/txt_celular"
             android:layout_width="350dp"
             android:layout_height="60dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape"
             android:ems="20"
@@ -56,6 +66,8 @@
             android:id="@+id/txt_contraseña"
             android:layout_width="350dp"
             android:layout_height="60dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape"
             android:ems="20"
