--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="blueg">#0D47A1</color>
     <color name="overlayBG">#7f333639</color>
     <color name="overlayAB">#0e0d0e</color>
+    <color name="grey">#646b63</color>
 
 
 </resources>
