--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,7 +22,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="35dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo"
+            android:contentDescription="@string/ini_title"/>
 
         <EditText
             android:id="@+id/txt_nombre"
@@ -34,7 +36,8 @@
             android:ems="20"
             android:hint="@string/txt_nombre"
             android:inputType="text"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/txt_correo"
@@ -47,7 +50,8 @@
             android:ems="20"
             android:hint="@string/txt_correo"
             android:inputType="text"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/txt_celular"
@@ -60,7 +64,8 @@
             android:ems="20"
             android:hint="@string/txt_celular"
             android:inputType="text"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:autofillHints="" />
 
         <EditText
             android:id="@+id/txt_contraseña"
@@ -73,7 +78,8 @@
             android:ems="20"
             android:hint="@string/txt_contraseña"
             android:inputType="textPassword"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/btn_registrarse"
