Bugs en la clase Registrar.java resueltos

--- a/app/src/main/res/layout/activity_comida_detalle.xml
+++ b/app/src/main/res/layout/activity_comida_detalle.xml
@@ -125,10 +125,11 @@
 
                         <Button
                             android:id="@+id/buttonL"
-                            android:layout_width="wrap_content"
+                            android:layout_width="65dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="1dp"
                             android:layout_marginRight="10dp"
+
                             android:layout_weight="1"
                             android:onClick="decrementar"
                             android:text="@string/ButtonL"
@@ -148,7 +149,7 @@
 
                         <Button
                             android:id="@+id/buttonR"
-                            android:layout_width="wrap_content"
+                            android:layout_width="65dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="1dp"
                             android:layout_marginRight="5dp"
