implementación de android:maxLength="9" en las cajas de texto

--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -55,6 +55,7 @@
 
         <EditText
             android:id="@+id/txt_celular"
+            android:maxLength="9"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:textColor="@color/black"
