--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
 
         <EditText
             android:id="@+id/txt_cel"
+            android:maxLength="9"
             android:layout_width="330dp"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
