--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -55,6 +55,7 @@
 
         <EditText
             android:id="@+id/txt_celular"
+            android:inputType="number"
             android:maxLength="9"
             android:layout_width="350dp"
             android:layout_height="60dp"
@@ -64,7 +65,6 @@
             android:background="@drawable/shape"
             android:ems="20"
             android:hint="@string/txt_celular"
-            android:inputType="text"
             android:padding="10dp"
             android:autofillHints="" />
 
