--- a/app/src/main/res/layout/dialog_carrito.xml
+++ b/app/src/main/res/layout/dialog_carrito.xml
@@ -34,7 +34,7 @@
 
                     <EditText
                         android:id="@+id/dialog_mesa"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
