--- a/app/src/main/res/layout/activity_comida_detalle.xml
+++ b/app/src/main/res/layout/activity_comida_detalle.xml
@@ -107,7 +107,7 @@
                             android:layout_marginTop="16dp"
                             android:layout_marginRight="1dp"
                             android:layout_weight="2"
-                            android:contentDescription="TODO"
+                            android:contentDescription="@string/soles"
                             android:src="@drawable/ic_svgsol"></ImageView>
 
                         <TextView
