--- a/app/src/main/res/layout/dialog_carrito.xml
+++ b/app/src/main/res/layout/dialog_carrito.xml
@@ -39,7 +39,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textSize="20sp"
-                        android:hint="Ingrese Número de Mesa"
+                        android:hint="@string/ingrese_n_mero_de_mesa_dialog_carrito"
                         android:layout_marginStart="10dp"
                         android:text=""
                         android:textStyle="bold" />
@@ -51,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textSize="20sp"
-                        android:hint="Ingrese Nombre del Cliente"
+                        android:hint="@string/ingrese_nombre_del_cliente_dilog_carrito"
                         android:layout_marginStart="10dp"
                         android:text=""
                         android:textStyle="bold" />
@@ -67,7 +67,7 @@
 
                 <info.hoang8f.widget.FButton
                     android:id="@+id/btnCancelD"
-                    android:text="Cancelar"
+                    android:text="@string/cancelar_dialog_carrito"
                     android:textSize="20sp"
                     android:layout_weight="1"
                     android:layout_width="0dp"
@@ -78,7 +78,7 @@
 
                 <info.hoang8f.widget.FButton
                     android:id="@+id/btnAceptarD"
-                    android:text="Aceptar"
+                    android:text="@string/aceptar_dialog_carrito"
                     android:textSize="20sp"
                     android:layout_weight="1"
                     android:layout_width="0dp"
