--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -11,22 +11,22 @@
 
         <ImageView
             android:id="@+id/menu_image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="Descripción" />
+            android:contentDescription="@string/Descripcion_menu_item"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background" />
 
         <TextView
             android:id="@+id/menu_name"
-            android:text="Nombre del Menú"
-            android:textColor="@android:color/white"
-            android:background="@color/blueg"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/blueg"
+            android:gravity="center"
+            android:text="@string/Nombre_del_menu"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
