--- a/app/src/main/res/layout/comidas_item.xml
+++ b/app/src/main/res/layout/comidas_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     app:cardElevation="4dp"
@@ -32,7 +33,7 @@
             android:textColor="@android:color/white"
             android:textSize="20sp"
 
-            />
+            tools:text="Menu" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
