--- a/app/src/main/res/layout/nav_header_inicio.xml
+++ b/app/src/main/res/layout/nav_header_inicio.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/overlayBG"
@@ -18,5 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
-        android:text="@string/user_header_inicio" />
+        android:text="@string/user_header_inicio"
+        tools:text="USUARIO" />
 </LinearLayout>
